[package]
name = "mylibafl"
edition = "2021"
#version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = {path = "../vendors/LibAFL/libafl" }
libafl_bolts = {path = "../vendors/LibAFL/libafl_bolts" }
libafl_nyx = { path = "../vendors/libafl_nyx" }
libafl_targets = { path = "../vendors/LibAFL/libafl_targets"}
nix = { version = "0.29" }
regex = { version = "1", optional = true }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
ahash = "0.8.11"
rand = "0.8.5"
log = "0.4.21"
env_logger = "0.11"
chrono = "0.4.37"
clap = { version = "4.5.3" }
byteorder = "1.5.0"
libc = "0.2"
libm = "0.2"
ring = "0.17"
slab = "0.4"
once_cell = "1"
octets = { version = "0.3", path = "../vendors/quiche/octets" }
boring = { version = "4", optional = true }
foreign-types-shared = { version = "0.3.0", optional = true }
intrusive-collections = "0.9.5"
qlog = { version = "0.13", path = "../vendors/quiche/qlog", optional = true }
sfv = { version = "0.9", optional = true }
smallvec = { version = "1.10", features = ["serde", "union"] }
quiche = {path = "../vendors/quiche/quiche"}
url = "2.5"
mio = { version = "0.8", features = ["net", "os-poll"] }
winapi = { version = "0.3", features = ["wincrypt", "ws2def", "ws2ipdef", "ws2tcpip"] }
hashbrown = { version = "0.14", features = ["serde", "ahash"], default-features = false } # A faster hashmap, nostd compatible
num-traits = "0.2"
bitflags = "1.3.2"
ctrlc = "3.1.0"
bincode = "1.3"  # 或者其它你需要的版本
[dev-dependencies]
similar = "2.4.0"