[package]
name = "quic_converter_nyx"
edition = "2021"
version.workspace = true

[dependencies]
clap = { version = "4.0", features = ["derive"] }
nix = { version = "0.29", features = ["signal"] }
libafl = { path = "../../vendors/LibAFL/libafl/" }
libafl_bolts = { path = "../../vendors/LibAFL/libafl_bolts/" }
libafl_cc = { path = "../../vendors/LibAFL/libafl_cc/" }
libafl_targets = { path = "../../vendors/LibAFL/libafl_targets/", features = ["sancov_pcguard_hitcounts", "libfuzzer", "pointer_maps"] }
log = "0.4.21"
env_logger = "0.11"
mylibafl = { path = "../../libafl-modules/" }
rand = "0.9.0-alpha.0"
ring = "0.17"
ctrlc = "3.1.0"
quiche = {path = "../../vendors/quiche/quiche"}
bincode = "1.3"  # 或者其它你需要的版本